# spectralmask

./: CMakeLists.txt  README.md
src/: main.cpp  masking.cpp  masking.h  masking.h.in  spectral.cpp  spectral.h
